--- a/page-store-listing.html
+++ b/page-store-listing.html
@@ -250,7 +250,7 @@
             </div>
         </div>
                       
-        <div data-menu-load="menu-footer.html"></div>
+        <!--div data-menu-load="menu-footer.html"></div-->
     </div>
     <!-- Page content ends here-->
     
